# translip

./: .gitignore  CLAUDE.md  README.en.md  README.md  playwright.config.ts  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/bgm/: LICENSE.md
config/: glossary.example.json  glossary.travel.json
docs/: README.md  delivery-test-report.md  dubbing-editor-manual.html  dubbing-script-generation.md  final-video-delivery.md  frontend-management-system-design.md  frontend-ui-guidelines.md  optimization-backlog.md  orchestration-test-report.md  pipeline-and-engineering-orchestration.md  project-optimization-analysis.md  qwen3-vl-integration-plan.md  render-test-report.md  single-speaker-voice-cloning.md  speaker-attributed-transcription.md  speaker-aware-dubbing-plan.md  speaker-aware-dubbing-task-breakdown.md  speaker-registry-and-retrieval.md  speaker-registry-test-report.md  subtitle-composition-design.md  synthesis-test-report.md  task-a-speaker-attributed-transcription.md  task-a-test-report.md  task-b-speaker-registry-and-retrieval.md  task-b-test-report.md  task-c-dubbing-script-generation.md  task-c-test-report.md  task-d-single-speaker-voice-cloning.md  task-d-test-report.md  task-e-test-report.md  task-e-timeline-fitting-and-mixing.md  task-f-pipeline-and-engineering-orchestration.md  task-f-test-report.md  task-g-final-video-delivery.md  task-g-test-report.md  technical-design.md  timeline-fitting-and-mixing.md  transcription-test-report.md  translation-test-report.md  translip-lab-tts-clone-eval.zh-CN.md
docs/superpowers/plans/: 2026-04-14-task-d-qwen3tts-migration.md  2026-04-14-task-f-pipeline-orchestrator.md  2026-04-15-dev-control-script.md  2026-04-15-template-dag-workflow-core.md  2026-04-15-template-dag-workflow-progress.md  2026-04-17-task-config-redesign-roadmap.zh-CN.md  2026-04-17-task-delivery-config-separation.md  2026-04-18-goal-first-delivery-refinement.md  2026-04-25-dubbing-quality-redesign.md  2026-04-29-dubai-srt-timing-comparison.md  2026-04-30-auto-dub-repair-loop.md  2026-04-30-dubai-vnext-dialogue-rescue.md  2026-04-30-dubbing-benchmark-character-tournament-plan.md  2026-05-09-atomic-tool-task-list.md  2026-05-09-task-center-navigation.md
docs/superpowers/reports/: 2026-04-22-voice-bank-qwen3tts-execution-report.zh-CN.md  2026-04-25-dubbing-pipeline-optimization-plan.zh-CN.md  2026-04-25-dubbing-rerun-dubai-eval.zh-CN.md  2026-04-25-dubbing-rerun-dubai-sprint3-ab.zh-CN.md  2026-04-25-dubbing-solution-research.zh-CN.md  (+15 more)
examples/: glossary.zh-en.sample.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manual.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  (+11 more)
scripts/: attribution_check.py  bgm_sources.example.toml  build_bgm_placeholders.py  dev.sh  dub_score.py  fetch_bgm_assets.py  prebake_narrator_voices.py  run_task_a_to_c.py  run_task_a_to_d.py  run_task_a_to_e.py  subtitle_ocr_cli_bridge.py
src/translip/: cli.py  config.py  exceptions.py  registry.py  speaker_embedding.py  types.py
src/translip_lab/: README.md  __init__.py  __main__.py  cli.py  config.py  doctor.py  tts_synth.py
src/video_voice_separate/: __init__.py  cli.py  config.py  exceptions.py  speaker_embedding.py  types.py
test-results/dubbing-editor-dubbing-editor-issue-interaction-chromium/: error-context.md
test-results/dubbing-editor-dubbing-editor-loads-and-shows-issue-queue-chromium/: error-context.md
tests/: test_analysis_routes.py  test_arbitration.py  test_argv_safety.py  test_asr_hotwords.py  test_asr_ocr_correction.py  test_asr_ocr_correction_pipeline.py  test_assistant_catalog.py  test_assistant_executor.py  test_assistant_planner.py  test_assistant_routes.py  test_atomic_cancellation.py  test_atomic_tools_api.py  test_atomic_tools_job_manager.py  test_atomic_tools_job_persistence.py  test_atomic_tools_registry.py  test_atomic_tools_subtitle.py  test_autofix_loop.py  test_backend_registry.py  test_cache_management.py  test_cdx23.py  test_character_ledger.py  test_cli.py  test_commentary_bgm.py  test_commentary_orchestration.py  test_commentary_style_phase1.py  test_commentary_voices.py  test_config_introspect.py  test_db_migrations.py  test_delivery.py  test_delivery_routes.py  test_dev_script.py  test_diarization_pipeline.py  test_dub_benchmark.py  test_dub_embeddings.py  test_dub_mel.py  test_dub_pitch.py  test_dub_qa.py  test_dubbing.py  test_dubbing_editor_routes.py  test_dubbing_parallel.py  (+59 more)
tests/e2e/: cache-management.spec.ts  capture-guide-extra.spec.ts  capture-guide-screenshots.spec.ts  capture-help-screenshots.spec.ts  character-library-binding.spec.ts  character-library.spec.ts  commentary-narrator.spec.ts  delivery-flow-strip.spec.ts  dubbing-editor-clip-preview.spec.ts  dubbing-editor-live-fit.spec.ts  dubbing-editor-playback-rate.spec.ts  dubbing-editor-power-flows.spec.ts  dubbing-editor.spec.ts  speaker-review-v2.spec.ts  works-library.spec.ts  works.spec.ts
tests/lab/: test_config.py  test_core_cache.py  test_core_invoke.py  test_core_run_store.py  test_core_runner.py  test_corpus_metrics.py  test_datasets_clip.py  test_datasets_folder.py  test_datasets_ramc.py  test_datasets_synthetic.py  test_datasets_synthetic_clone.py  test_datasets_textgrid.py  test_datasets_wenetspeech_drama.py  test_jobs.py  test_lab_cli.py  test_metrics_audio.py  test_metrics_detection.py  test_metrics_diarization.py  test_metrics_image.py  test_metrics_speaker.py  test_metrics_text.py  test_report.py  test_scenario_tts_clone.py  test_scenarios.py  test_server.py  test_sweep.py
tests/test_atomic_tools_adapters/: test_commentary_render.py  test_commentary_script_adapter.py  test_detect_language_adapter.py  test_dub_render_adapter.py  test_m3u8_to_mp4_adapter.py  test_probe_adapter.py  test_separation_adapter.py  test_subtitle_burn_embed_adapter.py  test_transcript_correction_adapter.py  test_transcription_adapter.py  test_translation_adapter.py  test_tts_adapter.py  test_video_analyze_adapter.py  test_video_trim_adapter.py  test_watermark_adapter.py
(+536 files in other folders)
